# Twain-Desk

./: .gitignore  CMakeLists.txt  Main.qml  README.md  icon.rc  main.cpp  res.qrc
Projects/TwainDesk/: TwainDesk_ar.ts  TwainDesk_en.ts
cpp/: scan_folder_watcher.cpp  scan_folder_watcher.h  twain_handler.cpp  twain_handler.h  worker.cpp  worker.h
cpp/models/: scanner_model.cpp  scanner_model.h
js/: Helper.js
qml/: AppSettings.qml  OptionsView.qml  PagesView.qml  StatusView.qml  TitleBar.qml
qml/components/: CButton.qml  CComboBox.qml  CContainer.qml  CItemDelegate.qml  CScrollBar.qml  CToolTip.qml  CWindow.qml
